--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,34 @@ $more-complex-filter-theme: mat.define-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+.container {
+  max-width: 1020px;
+  width: 100%;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
+.wrapper {
+  padding: 20px;
+  margin: 40px auto;
+}
+
+.form {
+  //max-width: 820px;
+  //width: 100%;
+  max-width: 100%;
+  width: auto;
+  padding: 10px;
+  margin: 0 auto;
+  border: 1px solid #dddddd;
+  border-radius: 5px;
+}
+
+.layer {
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+}
